--- a/array.html
+++ b/array.html
@@ -9,10 +9,11 @@
     <script src="array.js"></script>
 </head>
 <body>
-    <div style="position: relative; background-color:aquamarine;">
+    <div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">This Page</a></li>
+            <li><a href="objects.html">Objects</a></li>
         
         </ul>
     </div>
@@ -259,6 +260,52 @@
             </tr>
         </table>
     </div>
+
+
+    <div>
+        <h2>javaScript program-22</h2>
+        <u><p>ADD TWO,2-DIMENSIONAL ARRAYS Using Multiple Functions</p></u>
+        <table>
+            <tr>   
+                <td> <label for="text">Enter the array limit</label></td>   
+                <td><input type="text" id="arrayLimit2dSecond"> </td>
+                <td><button onclick="array2dMain()">Submit</button></td>
+            </tr>
+            <tr>
+                <td><label for="array" id="2dArraySecondOneLabel"></label></td>
+                <td><span id="2dArraySecondOne"></span></td>
+            </tr>
+            <tr>
+                <td><label for="array" id="2dArraySecondTwoLabel"></label></td>
+                <td><span id="2dArraySecondTwo"></span></td>
+            </tr>
+            <tr>
+                <td><label for="array" id="labelSum2dArraySecond"></label></td>
+                <td><span id="2dArraySecondResult"></span></td>
+            </tr>
+        </table>
+    </div>
+    
+    <div>
+        <h2>javaScript program-23</h2>
+        <u><p>2-DIMENSIONAL ARRAY Using Multiple Functions</p></u>
+        <table>
+            <tr>   
+                <td> <label for="text">Enter the array limit</label></td>   
+                <td><input type="text" id="arrayLimit2dSecondfunc"> </td>
+                <td><button onclick="array2dMainfunc()">Submit</button></td>
+            </tr>
+            <tr>
+                <td><label for="array" id="2dArraySecondOneLabelfunc"></label></td>
+                <td><span id="2dArraySecondOnefunc"></span></td>
+            </tr>
+            <tr>
+                <td><label for="array" id="2dArraySecondTwoLabelfunc"></label></td>
+                <td><span id="2dArraySecondTwofunc"></span></td>
+            </tr>
+        </table>
+    </div>
+
 
 
  
